# MiniMaxMusic

./: .dockerignore  .gitignore  Dockerfile  MiniMax-Music-应用生成器.md  README.md  docker-compose.yml
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py  minimax_client.py  tasks.py
backend/app/routes/: lyrics.py  music.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  api.ts  index.css
frontend/src/components/: CoverCropModal.tsx  CoverStep.tsx  LyricsStep.tsx  Player.tsx  StyleStep.tsx
frontend/src/utils/: cropImage.ts
